...
    <string name="distance_no_data">You don\'t seem to have any distance tracked yet. Try clicking the "+" (plus) button up top to get started.</string>
    <string name="distance_insert_failed">Error: Failed to create this distance item. Please make sure your phone is not mounted to your computer.</string>
    <string name="distance_update_failed">Error: Failed to update this distance item. Please make sure your phone is not mounted to your computer.</string>
    <string name="distance_delete_failed">Error: Failed to delete this distance item. Please make sure your phone is not mounted to your computer.</string>

    <!-- ================= Trip Actions =================== -->
    <string name="trip_action_new">New Report</string>

    <!-- ================= Receipt Actions =================== -->
    <string name="receipt_action_camera">Picture</string>
    <string name="receipt_action_gallery">Gallery</string>
    <string name="receipt_action_text">Text-Only</string>
    <string name="receipt_action_import">Import</string>
    <string name="receipt_action_send">Generate</string>
    <string name="receipt_action_distance">Distance</string>

    <!-- ==================== Cards ========================= -->
    <string name="card_overflow_contentDescription">Receipt Options</string>
...
