...
        android:tint="@color/text_primary_color"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_reorder_24dp"
        tools:visibility="visible" />

    <TextView
        android:id="@android:id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@color/text_primary_color"
        android:textSize="@dimen/card_name_size"
        android:textStyle="italic"
...
